# restore-my-windows-please

./: .gitignore  README.md  pyproject.toml  setup.py
src/geryxyz.restore_my_windows_please.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/geryxyz/restore_my_windows_please/: restore_please.py  save_please.py
src/geryxyz/restore_my_windows_please/model/: location.py
